--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML Page</title>
+    <title>Sumi's Secret Page</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is a simple HTML file for WECE Hacks!</p>
+    <h1>WELCOME TO SUMI'S SECRET PAGE!</h1>
+    <p>This is a simple HTML file where I will spill all the tea with my opps and my DITLs!!! Enjoy and be sure to hate on my opps and love my friends with me!</p>
 </body>
 </html>
+<p>This is how me and my opp used to be:</p>
+<img src="https://th.bing.com/th/id/OIP.5aKhA8rhSGnJzNnkGJgtLwHaLH?rs=1&pid=ImgDetMain" alt="MY DAWG">
+
+<p>Then my opp hurt me and gave me trauma</p>
+<img src="https://th.bing.com/th/id/R.f5b1771242af1747c60a8172c50879ee?rik=UGqGDvg7Ly%2bSOw&pid=ImgRaw&r=0" alt="MY DAWG">
+
+<p>I have really bad coping strategies so I shoved it down and I WAS OK!!! YAYYYYYY</p>
+<img src="https://th.bing.com/th/id/OIP._Fs0P0dG9T0OTRp8Md6aEAHaDt?rs=1&pid=ImgDetMain" alt="MY DAWG">
+
+<p>THE END PS. Would not reccomend this advice for other people going through the same thing. My more sincere condolences</p>
+<img src="https://th.bing.com/th/id/R.1f3f8bed74bc6bff0fa51000ffc44dac?rik=EtOCsP9okpuFZQ&pid=ImgRaw&r=0" alt="MY DAWG">
